# weatherballoon

./: README.md  weatherballoon.cabal
lib/Data/: WeatherBalloon.hs
lib/Data/WeatherBalloon/: Types.hs  Util.hs
src/: Generate.hs  Report.hs
tests/: Doctest.hs  Report.hs
tests/data/: 1000.txt  1000sorted.txt
